// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSnippet  can render 1`] = `
<div
  className="p-code-snippet"
>
  <CodeSnippetBlock
    code="Test"
    key="code-snippet-block-0"
  />
</div>
`;

exports[`CodeSnippet  can render snippet with title 1`] = `
<div
  className="p-code-snippet"
>
  <CodeSnippetBlock
    code="Test"
    key="code-snippet-block-0"
    title="Title"
  />
</div>
`;
